Paxtools-6: refactoring - - now java compatibility level 11 (was 8); - use Collections interface where possible; - add BiopaxSafeCollection (will try to replace Set in biopax object props); - upgraded biopax-search (full-text) module to use Lucene 7.5; - remove deprecated code, debug comments, etc. polish. - fixed some minor bugs (e.g. in TR), removed useless code/comments, etc.